crates/px4-workqueue/tests/trybuild/fail/bad_wq_name.rs
#![feature(type_alias_impl_trait)]

use px4_workqueue::task;

#[task(wq = "no_such_queue")]
async fn nope() {}

fn main() {}
